--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -81,6 +81,7 @@ $button-bg-active: #854413;
 .homeproducts {
     display: flex;
     flex-wrap: wrap;
+    margin-bottom: 20px;
 
     h1 {
         width: 100%;
@@ -117,6 +118,7 @@ $button-bg-active: #854413;
             }
             p{
                 font-size: 16px;
+                text-align: start;
             }
             .enquirebutton{
                 a{
